--- a/version3.tex
+++ b/version3.tex
@@ -524,7 +524,8 @@ where $T_{end}$ is the final simulation time [$T$], which is indeed the root mea
 
 \end{enumerate}
 
-\mich{The first objective function~\eqref{objektiva1} refers to overall mismatch between the experimental and model data. The second objective function~\eqref{objektiva2} refers to a local mismatch, which  often appeared  in the early simulation time. Slight local mismatch in the initial simulation has typically low impact on~\eqref{objektiva1}, but points to a significantly different SHP set -- a local extreme. The third objective function~\eqref{objektiva3} points to saturated hydraulic conductivity. Again slight mismatch in the final derivative has low impact on the first objective function~\eqref{objektiva1}, but points to a significantly different saturated hydraulic conductivity.}
+\mich{The first objective function~\eqref{objektiva1} refers to overall mismatch between the experimental and model data. The second objective function~\eqref{objektiva2} refers to a local mismatch, which  often appeared  in the early simulation time. Slight local mismatch in the initial simulation has typically low impact on~\eqref{objektiva1}, but points to a significantly different SHP set -- a local extreme. The strategy, where we focus both on the global and local error is motivated by~\cite{papez2014}, where it states that the reliable stopping criteria for iterative algebraic solvers should  take into account spatial distribution of the total error in the function space.
+The third objective function~\eqref{objektiva3} points to saturated hydraulic conductivity. Again slight mismatch in the final derivatives has low impact on the first objective function~\eqref{objektiva1}, but points to a significantly different saturated hydraulic conductivity.}
 
 We conducted multi-objective optimization. However, it is apparent that minimizing the objective function~\eqref{objektiva1} also minimizes the objective functions~\eqref{objektiva2} and \eqref{objektiva3}, \mich{and so we have introduced here a multiobjective definition with  non-competing objective functions. 
 
@@ -571,8 +572,19 @@ applications.
 
 \paragraph{Genetic algorithm}
 
-In this contribution we used the modified genetic algorithm GRADE \citep{grade,Kucerova:2007:PHD} supported by niching method CERAF \citep{Hrstka} enhancing the algorithm with
-memory and restarts. GRADE is a real-coded genetic algorithm combining the ideas of genetic operators: cross-over, mutation and selection taken from the standard genetic algorithm and differential operators taken from differential evolution. When GRADE converges, the current position of the optimization algorithm is marked as a local extreme and a forbidden area is built around it in order to forbid the optimization algorithm to fall into the same local extreme again. The main setting of the optimization procedure was as follows: the population of the genetic algorithm contains 30 independent solutions, the whole identification stops after 20.000 objective function evaluations and a local extreme was marked after 600 evaluations without any improvement.
+In this contribution we used the modified genetic algorithm GRADE \citep{grade,Kucerova:2007:PHD} supported by niching method CERAF~\citep{Hrstka} enhancing the algorithm with
+memory and restarts. \mich{GRADE is a real-coded genetic algorithm combining the ideas of genetic operators: cross-over, mutation and selection
+taken from the standard genetic algorithm and differential operators taken from differential evolution. In more detail,
+a new population is created with the same size as the old population by 40\% using a vectorized mutation and 60\% by
+the differential cross-over, see references above for particular details. Then the next generation is created by
+survival selection employing an inverse tournament selection, where the worse from two competitors is rejected
+repeatedly until the original size of the population is reached. In our case, the population of the genetic
+algorithm contains 30 independent solutions, 12 new solutions are created by mutation and 18 by cross-over, respectively. The whole identification stops after 40.000 evaluations of the problem simulations.
+
+When GRADE algorithm converges, the current position of the optimization algorithm is marked as a local extreme, is
+stored in a memory, and a forbidden area is built around it in order to forbid the optimization algorithm to fall into
+the same local extreme again and the whole algorithm is re-started. In our case a~local extreme was marked after 600
+evaluations without any improvement.}
 
 GRADE project is capable for multi-objective definition for the objective function, which is achieved with so-called
  Average Ranking (AR) \citep{Leps2007}. It sums ranks of the objective functions instead of the objective functions' values. Therefore, no weights are needed, however, the Pareto-dominance is not preserved as described in \cite{vitingerova:2010}. An application of the AR algorithm to parameters identification can be found in \cite{Kuraz:2010:JCAM}. 
@@ -582,8 +594,10 @@ GRADE project is capable for multi-objective definition for the objective functi
  \mich{
  \paragraph{Gradient algorithm} 
  
- Since achieving the fully converged solution with genetic algorithms is often cumbersome, the genetic algorithm was used here as an estimator of the initial condition for further gradient parameter search on narrow ranges. For gradient optimization we made use of Newton's method with box-constraints~\citep{byrd1995}, implemented in R environment~\citep{R-env}.
+ Since achieving the fully converged solution with genetic algorithms can be cumbersome, as well as the selected optimal position at the Pareto front from the multi-objective minimization doesn't necessarily point to the the local minimum of each objective function, the following strategy was considered here. The genetic algorithm was used here as an estimator of the initial condition for further gradient parameter search on narrow ranges. For gradient optimization we made use of Newton's method with box-constraints~\citep{byrd1995}, implemented in R environment~\citep{R-env}. Compared to the genetic algorithm optimization, only single objective criteria given by~\eqref{objektiva1} is minimized here.
 }
+
+
 \subsection{Numerical solution and computational issues}
 \label{trapoty}
 
@@ -1068,11 +1082,6 @@ We applied the methodology to synthetic and real transient SR infiltration data.
 Improvements of the calibration methodology should include research on efficient numerical techniques to solve the Richards equation, such as the development of $hp$-adaptive approximations and adaptive domain decomposition  methods.
 
 
-% Our future development of the proposed calibration methodology should focus on improving the analytical background for the empirical constants governing the sequential refinement levels, as well as on the numerical treatment of the Richards equation. 
-% % In would agree deleting this last sentence...
-% Particularly, the nonlinear operator treatment as well as the time adaptive domain decomposition and asynchronous methods for the Richards equation problems are still a challenging research topic.
-
-%Our future research  work will focus into several distinct directions. The representativeness of the catchment by a single SHP parameter set, which is obtained from average experimental data is limited. Rather than fitting a single average infiltration curve, we will focus on defining SHP parameter distributions according to the distribution of the experimental data, where even different initial conditions will be taken into consideration. Secondly, we will try to replace the empirical/expert knowledge based parameters in our inverse modeling methodology (such as setting the narrow parameter range, re-meshing, Picard error and time-steps) by rather analytically based estimates, which should incorporate the SHP parameter magnitude, nonlinear nature of the retention curve, and aposteriori error estimates for finite element method approximations. And finally, our research work will be further focused to a development of efficient numerical techniques for solving the challenging problems of the Richards equation, such as development of time adaptive asynchronous and domain decomposition methods. Our research contributions form a part of a development of our opensource project DRUtES~\citep{drutes}. 
 
 
 \bigskip
@@ -1241,28 +1250,28 @@ Total Sobol Index & 0.850 & 0.921 & 0.876 & 0.868 & 0.884 \\
 % \end{figure}
 % 
 % 
-% \section{New solutions for $r_f=1$}
-% 
-% The updated solutions for the local extremes 7 and 8 are depicted in figures~\ref{rf0rf1img1} and~\ref{rf0rf1img2}.
-% 
-% \begin{figure}
-% \rotatebox{-90}{
-% {\includegraphics[height=7cm]{images/fitrf1/7.eps}}}
-% \rotatebox{-90}{
-% {\includegraphics[height=7cm]{images/fitrf1/7-new.eps}}}
-% \label{rf0rf1img1}
-% \caption{Left: Local extreme 7 infiltration curve for the original parameter set obtained at $r_f=0$ and solved on model with discretization $r_f=1$, right: solution for the updated parameter set in  vicinity of the extreme 7.}
-% \end{figure}
-% 
-% \begin{figure}
-% \rotatebox{-90}{
-% {\includegraphics[height=7cm]{images/fitrf1/8.eps}}}
-% \rotatebox{-90}{
-% {\includegraphics[height=7cm]{images/fitrf1/8-new.eps}}}
-% \label{rf0rf1img2}
-% \caption{Left: Local extreme 8 infiltration curve for the original parameter set obtained at $r_f=0$ and solved on model with discretization $r_f=1$, right: solution for the updated parameter set in  vicinity of the extreme 7.}
-% \end{figure}
-% 
+\section{New solutions for $r_f=1$}
+
+The updated solutions for the local extremes 7 and 8 are depicted in figures~\ref{rf0rf1img1} and~\ref{rf0rf1img2}.
+
+\begin{figure}
+\rotatebox{-90}{
+{\includegraphics[height=7cm]{images/fitrf1/7.eps}}}
+\rotatebox{-90}{
+{\includegraphics[height=7cm]{images/fitrf1/7-new.eps}}}
+\label{rf0rf1img1}
+\caption{Left: Local extreme 7 infiltration curve for the original parameter set obtained at $r_f=0$ and solved on model with discretization $r_f=1$, right: solution for the updated parameter set in  vicinity of the extreme 7.}
+\end{figure}
+
+\begin{figure}
+\rotatebox{-90}{
+{\includegraphics[height=7cm]{images/fitrf1/8.eps}}}
+\rotatebox{-90}{
+{\includegraphics[height=7cm]{images/fitrf1/8-new.eps}}}
+\label{rf0rf1img2}
+\caption{Left: Local extreme 8 infiltration curve for the original parameter set obtained at $r_f=0$ and solved on model with discretization $r_f=1$, right: solution for the updated parameter set in  vicinity of the extreme 7.}
+\end{figure}
+
 % \section{Response plots for objective functions, $r_f=1,2$}
 % 
 % Response plots of the objective functions for the updated local extreme 7 for $r_f=1,2$ is depicted in figures~\ref{ext6rf1-an} - \ref{ext6rf1-Kt2}.
@@ -1308,7 +1317,7 @@ Total Sobol Index & 0.850 & 0.921 & 0.876 & 0.868 & 0.884 \\
 % \end{figure}
 % 
 % 
-
+% 
 
 
 
